cabal-version: 3.0
name:          blueprint
version:       0.1.0.0
synopsis:      plutus contract blueprint, CIP-0057

-- description:
license:       Apache-2.0
license-file:  LICENSE
author:        kayvank
maintainer:    kayvan@q2io.com

-- copyright:
build-type:    Simple

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities +RTS -K1440M -RTS

library
  import:           base, project-config
  exposed-modules:  AuctionValidator

  ---------------------
  -- TODO, on hold pending this plutus PR:
  -- https://github.com/IntersectMBO/plutus/pull/6165
  ---------------------
  -- AuctionValidatorBlueprint

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , text

  hs-source-dirs:   lib
  default-language: Haskell2010

executable blueprint
  import:           base, project-config
  main-is:          Main.hs
  build-depends:
    , blueprint
    , devnet
    , mtl

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite blueprint-test
  import:           base, project-config
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    blueprint
